@@ -18,6 +18,12 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2003-08-29  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/amd64/copyi.asm: New file.
+	* mpn/amd64/copyd.asm: New file.
+	* mpn/amd64/README: New file.
+
 2003-08-28  Torbjorn Granlund  <tege@swox.com>
 
 	* mpn/amd64/lshift.asm: New file.
